@@ -1,3 +1,8 @@
+2015-10-06  Carl Hetherington  <cth@carlh.net>
+
+	* Speculative support for multi-part
+	bitmap subtitles (#709).
+
 2015-10-05  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.4.0 released.
